video fixed on home

--- a/templates/home.html
+++ b/templates/home.html
@@ -122,7 +122,7 @@
 <!-- Background Video -->
 <div id="videoWrapper" class="fixed inset-0 z-0">
   <video id="heroVideo" class="w-full h-full object-cover brightness-[.7] contrast-110" autoplay muted playsinline poster="{% static 'images/background.jpg' %}">
-    <source src="{% static 'videos/bgvi.mp4' %}" type="video/mp4">
+    <source src="{% static 'videos/bgvid.mp4' %}" type="video/mp4">
     <!-- fallback text -->
     Your browser does not support the video tag.
   </video>
