--- a/templates/about.html
+++ b/templates/about.html
@@ -7,7 +7,7 @@
 <div 
   id="bg"
   class="fixed inset-0 w-full h-full z-0"
-  style="background-image: url('{% static 'images/background.png' %}'); background-size: cover; background-position: center; background-repeat: no-repeat;"
+  style="background-image: url('{% static 'images/bg2.png' %}'); background-size: cover; background-position: center; background-repeat: no-repeat;"
 ></div>
 
 <div class="min-h-screen flex items-center justify-center px-4 relative z-10">
