--- a/templates/join_tournament.html
+++ b/templates/join_tournament.html
@@ -6,7 +6,7 @@
 <!-- Full Screen Background Image -->
 <div 
   class="fixed inset-0 w-full h-full z-0"
-  style="background-image: url('{% static 'images/background.png' %}'); background-size: cover; background-position: center; background-repeat: no-repeat;"
+  style="background-image: url('{% static 'images/bg.png' %}'); background-size: cover; background-position: center; background-repeat: no-repeat;"
 ></div>
 
 <div class="min-h-screen flex items-center justify-center relative z-10">
