--- a/templates/tournament_dashboard.html
+++ b/templates/tournament_dashboard.html
@@ -4,8 +4,8 @@
 {% block content %}
 <!-- Full Screen Background Image -->
 <div 
-  class="fixed inset-0 w-full h-full z-0"
-  style="background-image: url('{% static 'images/background.png' %}'); background-size: cover; background-position: center; background-repeat: no-repeat;"
+    class="fixed inset-0 w-full h-full z-0"
+    style="background-image: url('{% static 'images/bg2.png' %}'); background-size: cover; background-position: center; background-repeat: no-repeat;"
 ></div>
 
 <div class="max-w-6xl mx-auto mt-10 p-8 bg-gray-800 bg-opacity-90 shadow-lg rounded-lg text-gray-100 relative z-10">
