--- a/templates/user_tournaments.html
+++ b/templates/user_tournaments.html
@@ -5,8 +5,8 @@
 {% block content %}
 <!-- Full Screen Background Image -->
 <div 
-  class="fixed inset-0 w-full h-full z-0"
-  style="background-image: url('{% static 'images/background.png' %}'); background-size: cover; background-position: center; background-repeat: no-repeat;"
+    class="fixed inset-0 w-full h-full z-0"
+    style="background-image: url('{% static 'images/bg2.png' %}'); background-size: cover; background-position: center; background-repeat: no-repeat;"
 ></div>
 
 <div class="min-h-screen bg-transparent text-white py-10 flex items-center justify-center relative z-10">
